-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.2
-
None
-
VNC server on either OpenSuse 12.2 64-bit and Ubuntu 12.04 64-bit
-
40236c35a62e0838cf150a6e0876e7d4f88e5a35
The original problem was reported whilst running the application through TightVNC under OpenSuse 12.2 64-bit. I can reproduce it with xtightvncviewer under Ubuntu 12.04 64-bit. The crash does not occur when running the app through ssh. The code below simply creates a QTextEdit. When running the app through a VNC server, hover over the text edit with your mouse to reproduce the crash.
#include <QApplication> #include <QTextEdit> int main(int argc, char *argv[]) { QApplication app(argc, argv); QTextEdit box("default"); box.show(); return app.exec(); }
Program received signal SIGSEGV, Segmentation fault. 0x00007ffff12f3fa0 in xcb_setup_vendor_end () from /usr/lib64/libxcb.so.1 (gdb) backtrace #0 0x00007ffff12f3fa0 in xcb_setup_vendor_end () from /usr/lib64/libxcb.so.1 #1 0x00007ffff12f3fd9 in xcb_setup_pixmap_formats () from /usr/lib64/libxcb.so.1 #2 0x00007ffff0e8fc33 in find_format_by_depth (setup=0x0, depth=24 '\030') at ../../../../3rdparty/xcb/xcb-util-image/xcb_image.c:42 #3 0x00007ffff0e906ca in xcb_image_native (c=0x613350, image=0x6bd6a0, convert=0) at ../../../../3rdparty/xcb/xcb-util-image/xcb_image.c:387 #4 0x00007ffff0e90a89 in xcb_image_shm_put (conn=0x613350, draw=6291462, gc=6291470, image=0x6bd6a0, shminfo=..., src_x=1, src_y=5, dest_x=1, dest_y=5, src_width=9, src_height=10, send_event=0 '\000') at ../../../../3rdparty/xcb/xcb-util-image/xcb_image.c:483 #5 0x00007ffff0e74e5a in QXcbShmImage::put (this=0x6bd640, window=6291462, target=..., source=...) at qxcbbackingstore.cpp:188 #6 0x00007ffff0e7558f in QXcbBackingStore::flush (this=0x63d180, window=0x730790, region=..., offset=...) at qxcbbackingstore.cpp:314 #7 0x00007ffff6f68f43 in QBackingStore::flush (this=0x763e10, region=..., win=0x730790, offset=...) at painting/qbackingstore.cpp:103 #8 0x00007ffff758eae9 in qt_flush (widget=0x7fffffffdc70, region=..., backingStore=0x763e10, tlw=0x7fffffffdc70, tlwOffset=...) at kernel/qwidgetbackingstore.cpp:119 #9 0x00007ffff759378b in QWidgetBackingStore::flush (this=0x737e50, widget=0x0) at kernel/qwidgetbackingstore.cpp:1105 #10 0x00007ffff758f3c3 in QWidgetBackingStore::endPaint (this=0x737e50, cleaned=..., backingStore=0x763e10, beginPaintInfo=0x7fffffffc900) at kernel/qwidgetbackingstore.cpp:333 #11 0x00007ffff75936cb in QWidgetBackingStore::sync (this=0x737e50) at kernel/qwidgetbackingstore.cpp:1093 #12 0x00007ffff75bcac9 in QWidgetPrivate::syncBackingStore (this=0x6295e0) at kernel/qwidget.cpp:1663 #13 0x00007ffff75cda22 in QWidget::event (this=0x7fffffffdc70, event=0x6e8fe0) at kernel/qwidget.cpp:8124 #14 0x00007ffff7725867 in QFrame::event (this=0x7fffffffdc70, e=0x6e8fe0) at widgets/qframe.cpp:534 #15 0x00007ffff77beae2 in QAbstractScrollArea::event (this=0x7fffffffdc70, e=0x6e8fe0) at widgets/qabstractscrollarea.cpp:1116 #16 0x00007ffff77a3ffe in QTextEdit::event (this=0x7fffffffdc70, e=0x6e8fe0) at widgets/qtextedit.cpp:1043 #17 0x00007ffff7584b12 in QApplicationPrivate::notify_helper (this=0x6039d0, receiver=0x7fffffffdc70, e=0x6e8fe0) at kernel/qapplication.cpp:3394 #18 0x00007ffff7584973 in QApplication::notify (this=0x7fffffffdca0, receiver=0x7fffffffdc70, e=0x6e8fe0) at kernel/qapplication.cpp:3359 #19 0x00007ffff67a6cca in QCoreApplication::notifyInternal (this=0x7fffffffdca0, receiver=0x7fffffffdc70, event=0x6e8fe0) at kernel/qcoreapplication.cpp:767 #20 0x00007ffff67aa5ab in QCoreApplication::sendEvent (receiver=0x7fffffffdc70, event=0x6e8fe0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:203 #21 0x00007ffff67a7fec in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x603b40) ---Type <return> to continue, or q <return> to quit--- at kernel/qcoreapplication.cpp:1368 #22 0x00007ffff67a799d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1228 #23 0x00007ffff681845a in postEventSourceDispatch (s=0x611800) at kernel/qeventdispatcher_glib.cpp:278 #24 0x00007ffff4f3a3b5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0 #25 0x00007ffff4f3a6e8 in ?? () from /usr/lib64/libglib-2.0.so.0 #26 0x00007ffff4f3a7a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #27 0x00007ffff6818c9b in QEventDispatcherGlib::processEvents (this=0x60c3a0, flags=...) at kernel/qeventdispatcher_glib.cpp:423 #28 0x00007ffff0e969ee in QPAEventDispatcherGlib::processEvents (this=0x60c3a0, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:123 #29 0x00007ffff67a3c7d in QEventLoop::processEvents (this=0x7fffffffdbb0, flags=...) at kernel/qeventloop.cpp:136 #30 0x00007ffff67a3f5f in QEventLoop::exec (this=0x7fffffffdbb0, flags=...) at kernel/qeventloop.cpp:212 #31 0x00007ffff67a737e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1020 #32 0x00007ffff6dd3db7 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1191 #33 0x00007ffff7581c55 in QApplication::exec () at kernel/qapplication.cpp:2669 #34 0x0000000000400bfd in main (argc=1, argv=0x7fffffffddb8) at main.cpp:17
| For Gerrit Dashboard: QTBUG-29978 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 50992,1 | Fixed crash when VNCing and trying to use non-present XFixes extension. | release | qt/qtbase | Status: MERGED | +2 | 0 |